--- a/prime_admin/templates/lms/cash_on_hand.html
+++ b/prime_admin/templates/lms/cash_on_hand.html
@@ -169,7 +169,7 @@
                     <div class="card mb-3 widget-content">
                         <div class="widget-content-wrapper">
                             <div class="widget-content-left">
-                                <div class="widget-heading">Accomodation</div>
+                                <div class="widget-heading">Accommodation</div>
                                 <div class="widget-subheading">Total Cash on Hand</div>
                             </div>
                             <div class="widget-content-right">
@@ -232,7 +232,7 @@
                 </table>
             </div>
 
-            <h5 style="margin-top: 20px;">Accomodation</h5>
+            <h5 style="margin-top: 20px;">Accommodation</h5>
             <div class="table-responsive">
                 <table id="tbl_student_payments" class="align-middle mb-0 table table-bordered table-striped table-hover">
                     <thead>
