--- a/prime_admin/templates/lms/pre_deposit_modal.html
+++ b/prime_admin/templates/lms/pre_deposit_modal.html
@@ -19,7 +19,7 @@
                                         <option value="">Please select source...</option>
                                         <option value="student_enrollees_payment">Student Enrollees Payment</option>
                                         <option disabled value="store_items_sold">Store Items Sold</option>
-                                        <option disabled value="accomodation">Accomodation</option>
+                                        <option disabled value="accommodation">Accommodation</option>
                                         <option disabled value="fund">Fund from Head Office/Accounting</option>
                                     </select>
                                     <div class="invalid-feedback">
