--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -86,10 +86,40 @@
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='js/lib/jquery.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='DataTables/datatables.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='DataTables/dataTables.checkboxes.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('bp_admin.static', filename='js/sidebar.js') }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 <script>
+    $(document).ready(function(){
+
+        // $(".model-function").click(function(){
+        //     $(".model-function").closest( "ul" ).css( "background-color", "red" );
+        // });
+    
+    
+        $.ajax({
+            url: '/auth/users/get-role-name',
+            type: "GET",
+            contentType: "application/json; charset=utf-8",
+            success: function(response) {
+    
+                if(response.roleName == "Secretary"){
+                    $("#header_Dashboard").hide();
+                    $("#header_Inventory").hide();
+                    $("#module_header_admin").hide();
+                } else if(response.roleName == "Partner"){
+                    $("#module_header_admin").hide();
+                    $("#header_Dashboard").hide();
+                    $("#header_Inventory").hide();
+                } else if(response.roleName == "Marketer"){
+                    $("#header_Dashboard").hide();
+                    $("#header_Inventory").hide();
+                    $("#module_header_admin").hide();
+                    $("#header_Accounting").hide();
+                }
+            }
+        });
+    });
+
             toastr.options = {
             "closeButton": true,
             "debug": false,
