feat: initial fund wallet

--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -115,6 +115,7 @@
                     $("#header_Inventory").hide();
                     $("#module_header_admin").hide();
                     $("#header_Accounting").hide();
+                    $("#header_Store").hide();
                 }
             }
         });
