fix: resize supplies

--- a/prime_admin/templates/lms/supplies_table.html
+++ b/prime_admin/templates/lms/supplies_table.html
@@ -27,8 +27,8 @@
             
         </div>
     </div>
-            <div style="width:1300px;" class="main-card mb-3 card">
-                    <div  class="table-responsive">
+            <div class="main-card mb-6 card">
+                    <div class="table-responsive">
                         <table id="index_table" class="mb-0 table">
                             <thead>
                             <tr>
