--- a/prime_admin/templates/lms/pre_deposit_modal.html
+++ b/prime_admin/templates/lms/pre_deposit_modal.html
@@ -20,7 +20,7 @@
                                         <option value="student_enrollees_payment">Student Enrollees Payment</option>
                                         <option disabled value="store_items_sold">Store Items Sold</option>
                                         <option disabled value="accommodation">Accommodation</option>
-                                        <option disabled value="fund">Fund from Head Office/Accounting</option>
+                                        <!-- <option disabled value="fund">Fund from Head Office/Accounting</option> -->
                                     </select>
                                     <div class="invalid-feedback">
                                         Please provide a valid value
